@@ -60,7 +60,7 @@ class UnitTestSuite {
 		~UnitTestSuite();
 		static UnitTestSuite& global(void);
 		void add(UnitTest* t, bool alloc = true);
-		int run(bool verbose, bool cdash_output);
+		int run(bool verbose);
 		int tests(void) { return ntests; }
 };
 
